# sprout-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
sprout_mcp/: client.py  server.py
