[project]
name = "sprout-mcp"
version = "0.1.0"
description = "MCP server wrapping the Sprout Social Public API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sprout-mcp = "sprout_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
